--- a/Burnout Simulation.ipynb
+++ b/Burnout Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,19 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
-    "import scipy.integrate as integrate"
+    "import scipy.integrate as integrate\n",
+    "import scipy.optimize as optimize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07dd58aad5134d9ea2cd3c2b40015f78",
+       "model_id": "bee9c2b9ccfb4a399463d626dd78ac7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a79d3289fef24419bda22262d2285f27",
+       "model_id": "7c7ec47d6eb44ed48ff373f7018a93b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "933393e241ef49779c620b82a478b99b",
+       "model_id": "ecaf02402816420ea09d532f0e25cf7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4abb31d65ee148c79a419d3db7901dc7",
+       "model_id": "1dda9a61e2764200a663f516d85b216d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,7 +80,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "405af0811c7f4bb9a8efdcdba92df694",
+       "model_id": "a26f152edb9e4cfb82daa70bc471b3f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -169,12 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Fit linear regression model to polynomial time versus thrust\n",
-    "#TODO : Improve this, maybe ditch regression model for simpler approach (like set of trapezoids)\n",
+    "#TODO : Improve this, maybe ditch regression model for simpler approach (like sequence of linear equations)\n",
     "thrust_regression = LinearRegression()\n",
     "thrust_regression.fit(polynomial_thrust_time, thrust_force)\n",
     "\n",
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
